Last Nightly Changes. Fixed a color issue with the menu and an image issue in the posts on small screen mode

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -79,8 +79,12 @@ main {
  */
 img {
   max-width: 100%;
+  height: auto;
   vertical-align: middle;
   border-radius: 10px;
+  @include media-query($on-palm) {
+    max-width: 90%;
+  }
 }
 
 em {
