--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -41,6 +41,10 @@
     color: $nav-text-color;
     line-height: $base-line-height;
 
+    @include media-query($on-palm) {
+      color: black;
+    }
+
     // Gaps between nav items, but not on the last one
     &:not(:last-child) {
       margin-right: 20px;
